@@ -82,12 +82,12 @@ class CompileAssignTests extends PHPUnit_Framework_TestCase {
     } 
     public function testAssignOld8()
     {
-        $tpl = $this->smarty->createTemplate('string:{assign var=foo value=[9,8,7,6]}{for $x in $foo}{$x}{/for}');
+        $tpl = $this->smarty->createTemplate('string:{assign var=foo value=[9,8,7,6]}{foreach $x in $foo}{$x}{/foreach}');
         $this->assertEquals("9876", $this->smarty->fetch($tpl));
     } 
     public function testAssignOld9()
     {
-        $tpl = $this->smarty->createTemplate('string:{assign var=foo value=[\'a\'=>9,\'b\'=>8,\'c\'=>7,\'d\'=>6]}{for $x in $foo}{$x@key}{$x}{/for}');
+        $tpl = $this->smarty->createTemplate('string:{assign var=foo value=[\'a\'=>9,\'b\'=>8,\'c\'=>7,\'d\'=>6]}{foreach $x in $foo}{$x@key}{$x}{/foreach}');
         $this->assertEquals("a9b8c7d6", $this->smarty->fetch($tpl));
     } 
     /**
@@ -122,17 +122,17 @@ class CompileAssignTests extends PHPUnit_Framework_TestCase {
     } 
     public function testAssignNew6()
     {
-        $tpl = $this->smarty->createTemplate("string:{\$foo=[9,8,7,6]}{for \$x in \$foo}{\$x}{/for}");
+        $tpl = $this->smarty->createTemplate("string:{\$foo=[9,8,7,6]}{foreach \$x in \$foo}{\$x}{/foreach}");
         $this->assertEquals("9876", $this->smarty->fetch($tpl));
     } 
     public function testAssignNew7()
     {
-        $tpl = $this->smarty->createTemplate("string:{\$foo=['a'=>9,'b'=>8,'c'=>7,'d'=>6]}{for \$x in \$foo}{\$x@key}{\$x}{/for}");
+        $tpl = $this->smarty->createTemplate("string:{\$foo=['a'=>9,'b'=>8,'c'=>7,'d'=>6]}{foreach \$x in \$foo}{\$x@key}{\$x}{/foreach}");
         $this->assertEquals("a9b8c7d6", $this->smarty->fetch($tpl));
     } 
     public function testAssignArrayAppend()
     {
-        $tpl = $this->smarty->createTemplate("string:{\$foo=1}{\$foo[]=2}{for \$x in \$foo}{\$x@key}{\$x}{/for}");
+        $tpl = $this->smarty->createTemplate("string:{\$foo=1}{\$foo[]=2}{foreach \$x in \$foo}{\$x@key}{\$x}{/foreach}");
         $this->assertEquals("0112", $this->smarty->fetch($tpl));
     } 
     public function testAssignNestedArray()
