@@ -25,7 +25,7 @@ class Smarty_Internal_Compile_ForClose extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        $_open_tag = $this->_close_tag(array('for', 'forarray', 'forelse'));
+        $_open_tag = $this->_close_tag(array('for', 'forelse'));
         if ($_open_tag == 'forelse')
             return "<?php }  ?>";
         else
